# ecg-arrhythmia-service

./: .ast_context.json  .ast_context.md  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_demo.py
.github/workflows/: ci.yml
app/: Dockerfile  ECG_BACKGROUND.md  requirements.txt  streamlit_demo.py
app/demo_samples/: record_100.npy  record_208.npy  record_232.npy  record_233.npy
ecg_arrhythmia_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: api_smoke_test.py  build_dataset.py  build_demo_samples.py  download_data.py  inspect_labels.py  predict_demo.py  train.py
src/api/: logging_config.py  main.py  schemas.py
src/data/: build_dataset.py  labels.py  load.py  preprocess.py  segment.py
src/ecg_arrhythmia_service.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/model/: architecture.py  dataset.py  predict.py  train.py
src/utils/: gcs.py
tests/: test_api.py  test_architecture.py  test_preprocess.py  test_segment.py
